# folder_transfer

./: README.md
files_lib/: Cargo.toml
files_lib/src/: encryption.rs  lib.rs  structs.rs
folder_transfer/: Cargo.toml  metadata.json
folder_transfer/folder_transfer/: Cargo.toml
folder_transfer/folder_transfer/src/: lib.rs
folder_transfer/pkg/: manifest.json
folder_transfer/worker/: Cargo.toml
folder_transfer/worker/src/: lib.rs
